Improve the html output of the Metrics/Performance endpoint

--- a/src/MHServerEmu.Auth/Data/Auth/Response.html
+++ b/src/MHServerEmu.Auth/Data/Auth/Response.html
@@ -31,6 +31,17 @@
 			color: #d7d7d7;
 			font: 12px/1.385 Verdana;
 		}
+
+		li {
+			color: #d7d7d7;
+			font: 12px/1.385 Verdana;
+		}
+
+		td {
+			color: #d7d7d7;
+			font: 12px/1.385 Verdana;
+			padding: 4px;
+		}
 	</style>
 </head>
 <body>
