Fix /Metrics/Performance table overflow on mobile

--- a/src/MHServerEmu.Auth/Data/Auth/Response.html
+++ b/src/MHServerEmu.Auth/Data/Auth/Response.html
@@ -37,6 +37,11 @@
 			font: 12px/1.385 Verdana;
 		}
 
+		table {
+			overflow-x: auto;
+			display: block;
+		}
+
 		td {
 			color: #d7d7d7;
 			font: 12px/1.385 Verdana;
