--- a/src/MHServerEmu.Auth/Data/Web/Response.html
+++ b/src/MHServerEmu.Auth/Data/Web/Response.html
@@ -9,51 +9,39 @@
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 	<style>
 		html {
-			background-color: #0D0D0B;
+			background-color: #0d0d0b;
 		}
-	
+
 		div.content {
 			max-width: 800px;
 			margin-left: auto;
 			margin-right: auto;
 			border: 1px solid #00717c;
-			background-color: #00090E;
+			background-color: #00090e;
 			padding: 20px;
-		}
-
-		div.content h1, h2, h3, h4, h5, h6 {
-			color: #00aaff;
-			font-family: "Bebas Neue", "Trebuchet MS", Verdana, sans-serif;
-			font-weight: normal;
-		}
-
-		div.content p {
 			color: #d7d7d7;
+		}
+
+		div.content p, li, td {
 			font: 12px/1.385 Verdana;
 		}
 
-		div.content p.disclaimer {
-			color: red;
+		div.content h1, h2, h3, h4, h5, h6, label {
+			font-family: "Bebas Neue", "Trebuchet MS", Verdana, sans-serif;
+			font-weight: normal;
+			color: #00aaff;
 		}
 
 		div.content input {
 			border: 1px solid black;
-			background: rgb(28, 28, 28);
+			background: #1c1c1c;
 			box-shadow: 0 0 1px 1px #00aaff;
-			color: #d7d7d7;
-			font: 12px/1.385 Verdana;
+			color: inherit;
 		}
 		
 		div.content label {
-			color: #d7d7d7;
-			font-family: "Bebas Neue", "Trebuchet MS", Verdana, sans-serif;
 			font-size: x-large;
-			font-weight: normal;
-		}
-
-		li {
-			color: #d7d7d7;
-			font: 12px/1.385 Verdana;
+			color: revert;
 		}
 
 		table {
@@ -62,8 +50,6 @@
 		}
 
 		td {
-			color: #d7d7d7;
-			font: 12px/1.385 Verdana;
 			padding: 4px;
 		}
 	</style>
