--- a/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
+++ b/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
@@ -7,87 +7,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-	<style>
-		html {
-			background-color: #0d0d0b;
-		}
-
-		/* content */
-		div.content {
-			max-width: 800px;
-			margin: 10px auto;
-			border: 1px solid #00717c;
-			background-color: #00090e;
-			padding: 20px;
-			color: #d7d7d7;
-		}
-
-		div.content p, li, td {
-			font: 12px/1.385 Verdana;
-		}
-
-		div.content h1, h2, h3, h4, h5, h6, label {
-			font-family: "Bebas Neue", "Trebuchet MS", Verdana, sans-serif;
-			font-weight: normal;
-			color: #00aaff;
-		}
-
-		div.content table {
-			overflow-x: auto;
-			display: block;
-		}
-
-		div.content td {
-			padding: 4px;
-		}
-
-		div.content button {
-			border: 1px solid black;
-			background: #1c1c1c;
-			box-shadow: 0 0 1px 1px #00aaff;
-			color: inherit;
-			padding: 8px;
-		}
-
-		div.content button:hover {
-			box-shadow: 0 0 1px 1px white;
-		}
-
-		div.content label {
-			font-size: x-large;
-			color: revert;
-		}
-
-		div.content input {
-			border: 1px solid black;
-			background: #1c1c1c;
-			box-shadow: 0 0 1px 1px #00aaff;
-			color: inherit;
-		}
-
-		/* tab-button-container */
-		div.tab-button-container {
-			display: flex;
-			justify-content: center;
-		}
-
-		div.tab-button-container button {
-			margin: 0px 4px;
-			width: 160px;
-		}
-
-		/* account-form */
-		div.account-form {
-			max-width: 280px;
-			margin-left: auto;
-			margin-right: auto;
-		}
-
-		div.account-form input, button {
-			width: 100%;
-			box-sizing: border-box;
-		}
-	</style>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="content">
@@ -131,78 +51,6 @@
 		</div>
 	</div>
 
-	<script>
-		const tabManager = {
-			currentTabId: "",
-
-			openTab(tabId) {
-				var tabs = document.getElementsByClassName("tab-content");
-				for (var i = 0; i < tabs.length; i++) {
-					tabs[i].style.display = "none";
-				}
-				
-				if (tabId == "") {
-					return;
-				}
-				else if (tabId == this.currentTabId) {
-					this.currentTabId = "";
-					return;
-				}
-
-				this.currentTabId = tabId;
-				document.getElementById(tabId).style.display = "block";
-			}
-		}
-
-		const apiUtil = {
-			postJson(path, data) {
-				const url = window.location.origin + path + "?outputFormat=json";	// Remove outputFormat when we deprecate the old web frontend
-				const json = JSON.stringify(data);
-
-				var xhr = new XMLHttpRequest();
-				xhr.open("POST", url, true);
-				xhr.setRequestHeader("Content-Type", "application/json");
-				xhr.onreadystatechange = function () {
-					if (xhr.readyState == 4 && xhr.status == 200) {
-						const response = JSON.parse(xhr.responseText);
-						window.alert(response.Text);
-					}
-				};
-
-				xhr.send(json);
-			}
-		}
-
-		const accountManager = {
-			createAccount(evt) {
-				const email = document.getElementById("email");
-				const playerName = document.getElementById("player-name");
-				const password = document.getElementById("password");
-				const confirmPassword = document.getElementById("confirm-password");
-
-				confirmPassword.setCustomValidity("");
-
-				if (email.reportValidity() == false || playerName.reportValidity() == false || password.reportValidity() == false) {
-					return;
-				}
-
-				if (password.value != confirmPassword.value) {
-					confirmPassword.setCustomValidity("Your passwords do not match.");
-					confirmPassword.reportValidity();
-					return;
-				}
-
-				const accountData = {
-					Email: email.value,
-					PlayerName: playerName.value,
-					Password: password.value
-				};
-
-				apiUtil.postJson("/AccountManagement/Create", accountData);
-			}
-		}
-
-		tabManager.openTab("");
-	</script>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
