Port region report to the web dashboard

--- a/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
+++ b/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
@@ -32,7 +32,9 @@
 
 	<div class="content tab-content" id="region-report-tab">
 		<h2>Region Report</h2>
-		<p>Coming soon...</p>
+		<button id="region-report-button">Refresh</button>
+		<ul id="region-report-list">
+		</ul>
 	</div>
 
 	<div class="content tab-content" id="create-account-tab">
