Port performance metrics to the web dashboard

--- a/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
+++ b/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
@@ -27,7 +27,13 @@
 
 	<div class="content tab-content" id="metrics-tab">
 		<h2>Metrics</h2>
-		<p>Coming soon...</p>
+		<button id="metrics-button">Refresh</button>
+		<h3>Memory</h3>
+		<div id="metrics-memory-container">
+		</div>
+		<h3>Games</h3>
+		<div id="metrics-game-container">
+		</div>
 	</div>
 
 	<div class="content tab-content" id="region-report-tab">
