Move conversion to hex string to JS for the web frontend

--- a/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
+++ b/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
@@ -28,19 +28,17 @@
 	<div class="content tab-content" id="metrics-tab">
 		<h2>Metrics</h2>
 		<button id="metrics-button">Refresh</button>
+		<div id="metrics-report-metadata"></div>
 		<h3>Memory</h3>
-		<div id="metrics-memory-container">
-		</div>
+		<div id="metrics-memory-container"></div>
 		<h3>Games</h3>
-		<div id="metrics-game-container">
-		</div>
+		<div id="metrics-game-container"></div>
 	</div>
 
 	<div class="content tab-content" id="region-report-tab">
 		<h2>Region Report</h2>
 		<button id="region-report-button">Refresh</button>
-		<ul id="region-report-list">
-		</ul>
+		<ul id="region-report-list"></ul>
 	</div>
 
 	<div class="content tab-content" id="create-account-tab">
