Port server status to the web dashboard

--- a/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
+++ b/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
@@ -22,7 +22,8 @@
 
 	<div class="content tab-content" id="server-status-tab">
 		<h2>Server Status</h2>
-		<p>Coming soon...</p>
+		<button id="server-status-button">Refresh</button>
+		<div id="server-status-container"></div>
 	</div>
 
 	<div class="content tab-content" id="metrics-tab">
