Implement game metric selector for the web dashboard

--- a/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
+++ b/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
@@ -33,6 +33,8 @@
 		<h3>Memory</h3>
 		<div id="metrics-memory-container"></div>
 		<h3>Games</h3>
+		<select id="metrics-game-select">
+		</select>
 		<div id="metrics-game-container"></div>
 	</div>
 
