--- a/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
+++ b/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
@@ -59,6 +59,7 @@
 		</div>
 	</div>
 
+	<script type="text/javascript" src="config.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
