Web Dashboard: Change region report output to table

--- a/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
+++ b/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
@@ -41,7 +41,7 @@
 	<div class="content tab-content" id="region-report-tab">
 		<h2>Region Report</h2>
 		<button id="region-report-button">Refresh</button>
-		<ul id="region-report-list"></ul>
+		<div id="region-report-container"></div>
 	</div>
 
 	<div class="content tab-content" id="create-account-tab">
