Web Dashboard: Move refresh buttons to the right corner

--- a/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
+++ b/src/MHServerEmu.Auth/Data/Web/Dashboard/index.html
@@ -21,14 +21,18 @@
 	</div>
 
 	<div class="content tab-content" id="server-status-tab">
+		<div class="tab-controls-container">
+			<button id="server-status-button">Refresh</button>
+		</div>
 		<h2>Server Status</h2>
-		<button id="server-status-button">Refresh</button>
 		<div id="server-status-container"></div>
 	</div>
 
 	<div class="content tab-content" id="metrics-tab">
+		<div class="tab-controls-container">
+			<button id="metrics-button">Refresh</button>
+		</div>
 		<h2>Metrics</h2>
-		<button id="metrics-button">Refresh</button>
 		<div id="metrics-report-metadata"></div>
 		<h3>Memory</h3>
 		<div id="metrics-memory-container"></div>
@@ -39,8 +43,10 @@
 	</div>
 
 	<div class="content tab-content" id="region-report-tab">
+		<div class="tab-controls-container">
+			<button id="region-report-button">Refresh</button>
+		</div>
 		<h2>Region Report</h2>
-		<button id="region-report-button">Refresh</button>
 		<div id="region-report-container"></div>
 	</div>
 
