Improve email validation when creating accounts

--- a/src/MHServerEmu.WebFrontend/Data/Web/Dashboard/index.html
+++ b/src/MHServerEmu.WebFrontend/Data/Web/Dashboard/index.html
@@ -54,7 +54,7 @@
 		<h2>Create Account</h2>
 		<div class="account-form" id="account-form">
 			<label for="create-account-email">Email Address</label><br>
-			<input type="text" id="create-account-email" name="email" maxlength="320" placeholder="Email Address" required><br><br>
+			<input type="text" id="create-account-email" name="email" minlength="5" maxlength="320" placeholder="Email Address" required><br><br>
 			<label for="create-account-player-name">Player Name</label><br>
 			<input type="text" id="create-account-player-name" name="player-name" placeholder="Player Name" maxlength="16" required><br><br>
 			<label for="create-account-password">Password</label><br>
