Web Dashboard: Add enter key handling to the account creation form

--- a/src/MHServerEmu.WebFrontend/Data/Web/Dashboard/index.html
+++ b/src/MHServerEmu.WebFrontend/Data/Web/Dashboard/index.html
@@ -61,7 +61,7 @@
 			<input type="password" id="create-account-password" name="password" placeholder="Password" minlength="3" maxlength="64" required><br><br>
 			<label for="create-account-confirm-password">Confirm Password</label><br>
 			<input type="password" id="create-account-confirm-password" name="confirm-password" placeholder="Confirm Password" minlength="3" maxlength="64" required><br><br>
-			<button type="submit" id="create-account-submit">Submit</button>
+			<button type="submit" id="create-account-submit-button">Submit</button>
 		</div>
 	</div>
 
