Implement MTXStore auth request routing

--- a/src/MHServerEmu.WebFrontend/Data/Web/MTXStore/add-g.html
+++ b/src/MHServerEmu.WebFrontend/Data/Web/MTXStore/add-g.html
@@ -59,6 +59,8 @@
 			downloader: "%REQUEST_DOWNLOADER%",
 			token: "%REQUEST_TOKEN%",
 			email: "%REQUEST_EMAIL%",
+			currentBalance: "%REQUEST_CURRENT_BALANCE%",
+			conversionRatio: "%REQUEST_CONVERSION_RATIO%",
 		});
 
 		var textNode = document.createTextNode(JSON.stringify(requestContext, null, 2));
